# synergy-ai-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
modules/module2-questionnaire/backend/: .coverage  .env.example  main.py  pyproject.toml  requirements.txt
modules/module2-questionnaire/backend/app/: __init__.py
modules/module2-questionnaire/backend/app/api/: deps.py  main.py
modules/module2-questionnaire/backend/app/api/routes/: advise.py  schema.py
modules/module2-questionnaire/backend/app/core/: __init__.py  config.py  llm_client.py
modules/module2-questionnaire/backend/app/schemas/: __init__.py  advice.py
modules/module2-questionnaire/backend/app/services/: __init__.py  advice_service.py
modules/module2-questionnaire/backend/app/services/parsers/: README.md  apps_script.py  consistency.py  products.py  questionnaire.py  rules.py  types.py  validators.py
modules/module2-questionnaire/backend/app/services/prompts/: __init__.py  base.py  (+5 more)
modules/module2-questionnaire/backend/scripts/: build_schemas.py  verify_advise.py
modules/module2-questionnaire/backend/tests/: test_scenarios_fixtures.py
modules/module2-questionnaire/backend/tests/api/: test_advise.py  test_schema_routes.py
modules/module2-questionnaire/backend/tests/core/: test_config.py  test_llm_client.py
modules/module2-questionnaire/backend/tests/integration/: conftest.py  test_advice_pipeline.py  test_advise_e2e.py
modules/module2-questionnaire/backend/tests/schemas/: test_advice.py
modules/module2-questionnaire/backend/tests/services/: test_advice_service.py
(+234 files in other folders)
